Change Log:
=============================
- DanbooruDownloader20170131
  - Implement #95: Filter images by extension in batch mode (using regex).
  - Fix Issue #90: Cannot select Use Regex in Settings Tab (UI issue).
  - Fix Issue #106: Update tags parsing for Sankaku.

- DanbooruDownloader20161221
  - Implement #46 and #81: prioritize tags based on define list.
    Please create a file called 'included_tags.txt' containing tags separated by lines.
    Regex is supported.
  - Fix Issue #102: hypnohub url fixes.
  - Fix Issue #91: update website url again.

- DanbooruDownloader20161122
  - Fix Issue #100: update job numbering.
  - Try Fix Issue #99: memory leak at batch download.

- DanbooruDownloader20161114
  - Fix Issue #97: Use per-job filename format.

- DanbooruDownloader20161112
  - Fix Issue #91: update website url.
  - Implement #96: Add %general% for the filename format.
  - Add colored tag column in download grid.
  - Update tag parser for sankaku.
  - Update tag replacement behaviour for tags exceeding limit to use Over Value.
  - Update tag replacement behaviour for missing tag to always use empty tag replacement.

- DanbooruDownloader20161009
  - Fix path error when do batch download.

- DanbooruDownloader20161008b
  - Implement #87: new filename format %uploadDateTime%.
                   set the DateTime format in settings tab.
  - Update regex to insert xml entity dtd.
  - Update xhtml.ent to include special character and math symbol.

- DanbooruDownloader20161002
  - Fix Issue #60: Handle undefined xml entity.
  - Fix thumbnail resize if thumb size bigger than column size.
  - Implement #86: Shutdown after batch job completed.
  - Add new provider: rule34hentai.net.

- DanbooruDownloader20160816
  - Implement #79: Add option to allow filepath exceeding 260 characters.
  - Implement #80: Create extra text file containing tags.
  - Fix Issue #77: Update provider list.
  - Update readme.txt

- DanbooruDownloader20160117