@@ -32,5 +32,5 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("3.2017.01.31")]
-[assembly: AssemblyFileVersion("3.2017.01.31")]
+[assembly: AssemblyVersion("3.2017.08.08")]
+[assembly: AssemblyFileVersion("3.2017.08.08")]
